# call_me_maybe

./: .gitignore  Makefile  README.md  pyproject.toml
llm_sdk/llm_sdk/: __init__.py
src/: __main__.py  config.py  input_parser.py  json_loader.py
src/models/: function_call.py  function_call_output.py  function_definition.py  prompt_input.py  type_definition.py
