[project]
name = "call_me_maybe"
version = "0.1.0"
description = "Introduction to function calling in LLMs"
requires-python = ">=3.10"
dependencies = [
	"pydantic",
	"numpy"
]

[dependency-groups]
dev = [
    "flake8>=7.0,<8",
    "mypy>=1.10,<2",
    "pytest>=8,<10",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
